--- a/turf-aoi-mobile.css
+++ b/turf-aoi-mobile.css
@@ -1,5 +1,5 @@
 @media only screen 
-and (max-width : 480px) {
+and (max-width : 640px) {
 
 	#player-info {
 	  left: 10px;
@@ -19,5 +19,7 @@ and (max-width : 480px) {
 	  max-width: 24px;
 	}
 
-
+	#log_icon {
+	  display: none;
+	}
 }
